[project]
name = "uv-python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
  "commitizen>=4.6.0",
  "isort>=6.0.1",
  "mypy>=1.15.0",
  "pip-audit>=2.9.0",
  "pre-commit>=4.2.0",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "pytest-cov>=6.1.1",
  "ruff>=0.11.8",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"
fix = true

[tool.ruff.per-file-ignores]
"**/tests/*.py" = ["ANN201", "S101"]

[tool.ruff.lint]
select = [
  "FAST",
  "ANN",
  "ASYNC",
  "S",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "ISC",
  "LOG",
  "G",
  "PIE",
  "T20",
  "PYI",
  "PT",
  "RET",
  "SIM",
  "TID",
  "ARG",
  "PTH",
  "I",
  "C90",
  "W",
  "F",
  "RUF",
  "TRY",
]
ignore = []
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 88

[tool.pytest.ini_options]
pythonpath = "src"
asyncio_default_fixture_loop_scope = "function"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
tag_format = "v$version"
version_files = ["pyproject.toml:version"]
update_changelog_on_bump = true
bump_message = "chore(release): bump version $current_version → $new_version"

[tool.mypy]
mypy_path = "src"

[tool.coverage.run]
omit = ["*/tests/*", "*/test_*.py", "*/*_test.py"]
